Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-7941

Wine Tests: GetLastError() returns incorrect value in tests kernel32_winetest console after calling VerifyConsoleIoHandle() for invalid handle

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.3.17
    • RosDlls
    • None

    Description

      The wine test for kernel32 console shows:
      console.c:1219: Test failed: wrong GetLastError() 6
      console.c:1226: Test failed: wrong GetLastError() 6
      console.c:1233: Test failed: wrong GetLastError() 6
      console.c:1240: Test failed: wrong GetLastError() 6

      Attachments

        Issue Links

          Activity

            People

              hbelusca hbelusca
              max3raza Maxim Andreyanov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: