reactos/win32ss/user/winsrv/consrv/console.c
@@ -543,22 +543,22 @@ CSR_API(SrvSetConsoleTitle)
 NTSTATUS NTAPI
 ConDrvGetConsoleCP(IN PCONSOLE Console,
                    OUT PUINT CodePage,
-                   IN BOOLEAN InputCP);
+                   IN BOOLEAN OutputCP);
 CSR_API(SrvGetConsoleCP)
 {
     NTSTATUS Status;
-    PCONSOLE_GETSETINPUTOUTPUTCP ConsoleCPRequest = &((PCONSOLE_API_MESSAGE)ApiMessage)->Data.ConsoleCPRequest;
+    PCONSOLE_GETINPUTOUTPUTCP GetConsoleCPRequest = &((PCONSOLE_API_MESSAGE)ApiMessage)->Data.GetConsoleCPRequest;
     PCONSOLE Console;
 
     DPRINT("SrvGetConsoleCP, getting %s Code Page\n",
-            ConsoleCPRequest->InputCP ? "Input" : "Output");
+            GetConsoleCPRequest->OutputCP ? "Output" : "Input");
 
     Status = ConSrvGetConsole(ConsoleGetPerProcessData(CsrGetClientThread()->Process), &Console, TRUE);
     if (!NT_SUCCESS(Status)) return Status;
 
     Status = ConDrvGetConsoleCP(Console,
-                                &ConsoleCPRequest->CodePage,
-                                ConsoleCPRequest->InputCP);
+                                &GetConsoleCPRequest->CodePage,
+                                GetConsoleCPRequest->OutputCP);
 
     ConSrvReleaseConsole(Console, TRUE);
     return Status;
@@ -567,22 +567,22 @@ CSR_API(SrvGetConsoleCP)
 NTSTATUS NTAPI
 ConDrvSetConsoleCP(IN PCONSOLE Console,
                    IN UINT CodePage,
-                   IN BOOLEAN InputCP);
+                   IN BOOLEAN OutputCP);
 CSR_API(SrvSetConsoleCP)
 {
     NTSTATUS Status = STATUS_INVALID_PARAMETER;
-    PCONSOLE_GETSETINPUTOUTPUTCP ConsoleCPRequest = &((PCONSOLE_API_MESSAGE)ApiMessage)->Data.ConsoleCPRequest;
+    PCONSOLE_SETINPUTOUTPUTCP SetConsoleCPRequest = &((PCONSOLE_API_MESSAGE)ApiMessage)->Data.SetConsoleCPRequest;
     PCONSOLE Console;
 
     DPRINT("SrvSetConsoleCP, setting %s Code Page\n",
-            ConsoleCPRequest->InputCP ? "Input" : "Output");
+            SetConsoleCPRequest->OutputCP ? "Output" : "Input");
 
     Status = ConSrvGetConsole(ConsoleGetPerProcessData(CsrGetClientThread()->Process), &Console, TRUE);
     if (!NT_SUCCESS(Status)) return Status;
 
     Status = ConDrvSetConsoleCP(Console,
-                                ConsoleCPRequest->CodePage,
-                                ConsoleCPRequest->InputCP);
+                                SetConsoleCPRequest->CodePage,
+                                SetConsoleCPRequest->OutputCP);
 
     ConSrvReleaseConsole(Console, TRUE);
     return Status;
@@ -600,8 +600,8 @@ CSR_API(SrvGetConsoleProcessList)
     PCONSOLE Console;
 
     if (!CsrValidateMessageBuffer(ApiMessage,
-                                  (PVOID)&GetProcessListRequest->pProcessIds,
-                                  GetProcessListRequest->nMaxIds,
+                                  (PVOID)&GetProcessListRequest->ProcessIdsList,
+                                  GetProcessListRequest->ProcessCount,
                                   sizeof(DWORD)))
     {
         return STATUS_INVALID_PARAMETER;
@@ -611,9 +611,9 @@ CSR_API(SrvGetConsoleProcessList)
     if (!NT_SUCCESS(Status)) return Status;
 
     Status = ConDrvGetConsoleProcessList(Console,
-                                         GetProcessListRequest->pProcessIds,
-                                         GetProcessListRequest->nMaxIds,
-                                         &GetProcessListRequest->nProcessIdsTotal);
+                                         GetProcessListRequest->ProcessIdsList,
+                                         GetProcessListRequest->ProcessCount,
+                                         &GetProcessListRequest->ProcessCount);
 
     ConSrvReleaseConsole(Console, TRUE);
     return Status;
